[package]
name = "Confdumpv2"
version = "0.1.0"
authors = ["ayonsaha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
serde = "1.0"
serde_json = "1.0"
wmi = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"